--- a/notificaciones/nuevanovedad.html
+++ b/notificaciones/nuevanovedad.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid bg-gray">
     <div class="col-md-12">
       <div
       class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
@@ -25,7 +25,7 @@
       <div class="row">
         <ul class="nav">
           <li class="m-y-1">
-            <a href="/index.html"
+            <a href="#"
               ><i
                 class="icono-arg-casa-negativo"
                 style="font-size: 0.75em"
@@ -60,81 +60,94 @@
         <p>Nombre Apellido</p>
       </div>
     </div>
-    <div class="col-md-9 m-t-2">
-                  <div class="col-md-6 p-x-3">
-                      <h1 class="h4 p-x-0 m-b-0">Crear nueva novedad</h1>
-                      <hr>
-                      <form class="p-x-1">
-                                  <div class="row">
-                                      <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                          <label class="control-label">Nombre de la novedad</label>
-                                          <input class="form-control form-text required" type="text" placeholder="Ingresar el nombre de la notificación">
-                                      </div>
+    <div class="col-md-9 p-l-3 p-y-1 p-x-2">
+      <h1 class="h3 m-b-2"><i class="fa fa-chevron-left" style="font-size: 0.75em"></i> Crear nueva novedad</h1>
+      <div class="col-md-7">
+                      <form>
+                        <div>
+                                  <div class="row m-y-2">
+                                          <label>Nombre de la novedad</label>
+                                          <input class="form-control" type="text" placeholder="Ingresar el nombre de la notificación">
                                   </div>
-                                  <div class="row">
-                                      <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                          <label class="control-label">Campaña</label>
-                                          <input class="form-control form-text required" type="text" placeholder="Seleccioná la campaña">
-                                      </div>
+                                  <div class="row m-b-2">
+                                    <button class="btn btn-link btn-sm pull-right m-t-1">+ Crear campaña</button>
+
+                                          <label>Campaña</label>
+                                          <input class="form-control" type="text" placeholder="Seleccioná la campaña">
                                   </div>
-                              <hr>
-                                  <div class="row">
-                                      <div class="form-item webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
+                                  <div class="row m-b-1">
+                                    <div class="col-md-6 p-x-0">
+                                      <label>Fecha de envío</label>
+                                      <input type="date" class="form-control">
+                                    </div>
+                                  </div>
+                                  <div class="row m-b-2">
                                           <label>Título</label>
-                                          <input class="form-control form-text required" type="text" placeholder="Prevení el dengue">
+                                          <input class="form-control" type="text" placeholder="Prevení el dengue">
                                           <p class="help-block error">Extensión máxima: 65 carácteres</p>
-                                      </div>
                                   </div>
-                                  <div class="row">
-                                      <div class="class=form-item webform-component webform-component-textarea webform-component--textarea form-group form-item form-item-submitted-textarea form-type-textarea form-group">
-                                          <label class="control-label">Cuerpo del mensaje</label>
-                                          <div class="form-textarea-wrapper resizable textarea-processed resizable-textarea">
-                                              <textarea class="form-control form-textarea required" cols="30" rows="2" placeholder="Ingresar el cuerpo del mensaje"></textarea>
-                                          </div>
+                                  <div class="row m-b-2">
+                                          <label>Cuerpo del mensaje</label>
+                                              <textarea class="form-control" cols="30" rows="2" placeholder="Ingresar el cuerpo del mensaje"></textarea>
                                               <p class="help-block error">Extensión máxima: 65 carácteres</p>
-                                      </div>
                                   </div>
-                                  <div class="row">
-                                      <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                          <label class="control-label">Link</label>
-                                          <input class="form-control form-text required">
-                                      </div>
+                                  <div class="row m-b-2">
+                                          <label>Link</label>
+                                          <input class="form-control">
                                   </div>     
-                                  <div class="row">
-                                      <div class="form-group p-x-0 item-form">
-                                          <label>Fecha de inicio</label>
-                                          <input type="date" class="form-control">
-                                      </div>
-                                  </div>
-                                  <div class="row">
-                                      <div class="form-group p-x-0 item-form">
-                                          <label>Fecha de fin</label>
-                                          <input type="date" class="form-control">
-                                      </div>
-                                  </div>    
+                                  <div class="row m-b-1">
+                                    <div class="col-md-6 p-l-0">
+                                      <label>Fecha de inicio</label>
+                                      <input type="date" class="form-control">
+                                    </div>
+                                    <div class="col-md-6 p-r-0">
+                                      <label>Fecha de fin</label>
+                                      <input type="date" class="form-control">
+                                    </div>
+                                  </div>   
                                   <fieldset>
-                                      <div class="form-group p-x-0 item-form">
-                                          <div class="checkbox">
-                                              <label>
-                                                  <input type="checkbox">Notificación destacada
-                                              </label>
-                                          </div>  
-                                      </div>
+                                  
                                   </fieldset>                 
-                                  <div class="row p-x-0">
-                                      <div class="form-group p-x-0 item-form">
-                                          <label>Provincia</label>
-                                          <select class="form-control">
-                                          <option selected="">Opción</option>
-                                      </div>
+                                  <div class="row m-b-1">
+                                    <div class="col-md-6 p-l-0">
+                                      <label>Categoría (Mis servicios)</label>
+                                      <select class="form-control">
+                                      <option selected="">Opción</option>
+                                    </div>
+                                    <div class="col-md-6 p-r-0">
+                                      <label>
+                                          <input type="checkbox">Notificación destacada
+                                      </label>
+                                    </div>  
                                   </div>
+                                </div>
+
                       </form>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-8 p-x-1 m-y-4">
-                          <button type="button" class="btn btn-success m-r-2" onclick="location.replace('../componentes/segmentacion.html')">Siguiente</button>
-                          <button type="button" onclick="location.replace('../index.html')" class="btn btn-danger">Cancelar</button>
+                      <div class="m-y-2">
+                        <button
+                          type="button"
+                          class="btn btn-success m-r-1 btn-sm"
+                          onclick="location.replace('../destinatarios.html')"
+                        >
+                          Siguiente
+                        </button>
+                        <button
+                          type="button"
+                          class="btn btn-success m-r-1 btn-sm"
+                          onclick="location.replace('nuevanoti.html')"
+                        >
+                          Volver
+                        </button>
+                        <button
+                          type="button"
+                          onclick="location.replace('../index.html')"
+                          class="btn btn-primary btn-sm"
+                        >
+                          Guardar
+                        </button>
                       </div>
+                  </div>
+                  
                   </div>
           </div>
           </div>
