--- a/resumen.html
+++ b/resumen.html
@@ -33,14 +33,14 @@
           style="min-width: fit-content; width: 280px; height: 100vh"
         >
           <div class="row">
-            <h1 class="h4 p-x-2">
+            <h1  class="h3 m-b-2">
               <i class="fa fa-inbox" style="font-size: 0.75em"></i> Noti.mi
             </h1>
           </div>
           <div class="row">
             <ul class="nav">
               <li class="m-y-1">
-                <a href="#"
+                <a href="index.html"
                   ><i
                     class="icono-arg-casa-negativo"
                     style="font-size: 0.75em"
@@ -83,54 +83,67 @@
           <p class="p-x-1 m-b-3">Revisa y confirma el envío</p>
           <div class="col-md-7">
             <p><strong>Detalle del mensaje</strong></p>
-                <div class="row panel-body panel-default bg-white">
+              <div class="row panel-body panel-default bg-white">
                 <div class="hidden-xs">
-                    <p>
-                    <small>Nombre: <strong>Recomendación 5</strong></small>
-                    </p>
-                    <p>
-                    <small>Campaña: <strong>Recomendación 5</strong></small>
-                    </p>
+                      <p>
+                      <small>Nombre: <strong>Recomendación 5</strong></small>
+                      </p>
+                      <p>
+                      <small>Campaña: <strong>Recomendación 5</strong></small>
+                      </p>
                 </div>
                 <div class="row panel-body">
-                    <div class="hidden-xs">
-                    <p>
-                        <small>Titulo: <br/> <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. </strong></small>
-                    </p>
-                    <p>
-                        <small>Cuerpo del mensaje: <br/> <strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla deserunt eius ullam cumque? Ut, iusto quae! Illo repellat fuga molestias delectus. Ipsa iure molestias impedit? Perspiciatis voluptatem molestias dolore culpa!</strong></small>
-                    </p>
-                    <p>
-                        <small>Link: <br/> <strong>Loremipsumdolorsitametconsecteturadipisicingelit</strong></small>
-                    </p>
-                    </div>
-                    <div class="row panel-body">
-                        <div class="hidden-xs">
-                        <p>
-                            <small>Fecha de envío: <br/> <strong>01/05/1999</strong></small>
-                        </p>
-                        <p>
-                            <small>Hora de envío: <br/> <strong>00:00</strong></small>
-                        </p>
-                        
-                        </div>
-                </div>
+                      <div class="hidden-xs">
+                      <p>
+                          <small>Titulo: <br/> <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. </strong></small>
+                      </p>
+                      <p>
+                          <small>Cuerpo del mensaje: <br/> <strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla deserunt eius ullam cumque? Ut, iusto quae! Illo repellat fuga molestias delectus. Ipsa iure molestias impedit? Perspiciatis voluptatem molestias dolore culpa!</strong></small>
+                      </p>
+                      <p>
+                          <small>Link: <br/> <strong>Loremipsumdolorsitametconsecteturadipisicingelit</strong></small>
+                      </p>
+                      </div>
+                      <div class="row panel-body">
+                          <div class="hidden-xs">
+                          <p>
+                              <small>Fecha de envío: <br/> <strong>01/05/1999</strong></small>
+                          </p>
+                          <p>
+                              <small>Hora de envío: <br/> <strong>00:00</strong></small>
+                          </p>
+                          
+                          </div>
+                  </div>
                 </div>           
-            </div>
-        </div>
-        <div class="row col-md-7 m-t-2 p-x-2">
+              </div>
+          </div>
+          <div class="row col-md-7 m-t-2 p-x-2">
             <p><strong>Detalle del destinatario</strong></p>
             <div class="row panel-body panel-default bg-white">
-                <div class="hidden-xs">
+              <div class="hidden-xs">
                     <p>
                     <small>Nombre: <strong>Recomendación 5</strong></small>
                     </p>
                     <p>
                     <small>Campaña: <strong>Recomendación 5</strong></small>
                     </p>
-                </div>
-
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
+        <div class="col-md-3">
+          <div class="row panel-body panel-default bg-white">
+            <div class="hidden-xs">
+                  <p>
+                  <small>Nombre: <strong>Recomendación 5</strong></small>
+                  </p>
+                  <p>
+                  <small>Campaña: <strong>Recomendación 5</strong></small>
+                  </p>
+            </div>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
