--- a/configuracion.html
+++ b/configuracion.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-gray">
       <div
         class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
         style="min-width: fit-content; width: 280px; height: 100vh"
