--- a/destinatarios.html
+++ b/destinatarios.html
@@ -27,7 +27,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-gray">
       <div class="col-md-12 p-l-0">
         <div
         class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
@@ -79,16 +79,16 @@
         </div>
       </div>
         <div class="col-md-9 p-l-3 p-y-1 p-x-2">
-          <h1 class="h3 p-x-2">
-            <i class="fa fa-dashboard" style="font-size: 0.75em"></i>
+          <h1 class="h3 m-b-2">
+            <i class="fa fa-chevron-left" style="font-size: 0.75em"></i>
             Destinatarios
           </h1>
-          <button
-            type="submit"
-            class="btn btn-default btn-tag pull-right m-x-1"
+          <label class="pull-right">Selección masiva
+          <input
+            type="radio"
           >
-            Selección masiva
-          </button>
+          </input>
+        </label>
           <div class="col-md-11">
             <ul class="nav nav-tabs m-t-4">
               <li>
@@ -102,7 +102,7 @@
               <li><a data-toggle="tab" href="#contacto">Avanzado</a></li>
             </ul>
             <div
-              class="tab-content bg-gray p-y-0"
+              class="tab-content bg-gray"
               style="padding: 20px; border: 1px solid #ddd; border-top: none"
             >
               <div id="edadgenero" class="tab-pane fade in active p-y-2 p-x-2">
@@ -239,20 +239,25 @@
             </div>
           </div>
 
-          <div class="col-md-12 m-y-2">
-            <button type="submit" class="btn btn-default btn-tag">
+          <div class="m-y-2">
+            <button
+              type="button"
+              class="btn btn-success m-r-1 btn-sm"
+              onclick="location.replace('resumen.html')"
+            >
               Siguiente
             </button>
             <button
               type="button"
-              class="btn btn-default btn-tag"
-              onclick="location.replace('notificaciones/nuevapush.html')"
+              class="btn btn-success m-r-1 btn-sm"
+              onclick="location.replace('nuevanoti.html')"
             >
               Volver
             </button>
             <button
               type="button"
-              class="btn btn-default btn-tag"
+              onclick="location.replace('../index.html')"
+              class="btn btn-primary btn-sm"
             >
               Guardar
             </button>
