--- a/metricas.html
+++ b/metricas.html
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-gray">
       <div class="col-md-12 p-l-0">
         <div
           class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
